# gadk

./: .coveragerc  .gitignore  CHANGELOG.md  LICENSE  Makefile  Pipfile  README.md  pyproject.toml  setup.py  tox.ini
gadk/: __init__.py  cli.py  constants.py  elements.py  utils.py
tests/integration/: tests.sh
tests/integration/examples/abstract/: actions.py  expected.yml
tests/integration/examples/abstract/workflows/: __init__.py  bar.py  foo.py  lib.py
tests/integration/examples/artifacts/: actions.py  expected.yml
tests/integration/examples/custom_step/: actions.py  expected.yml
tests/integration/examples/simple/: actions.py  expected.yml
tests/unit/: test_elements.py  test_utils.py
