[tool.poetry]
name = "gadk"
version = "0.0.1"
description = "Unofficial Github Actions Development Kit"
authors = ["Maarten Jacobs <maarten.j.jacobs@gmail.com>"]
readme = "README.md"
repository = "https://github.com/maartenJacobs/gadk"
license = "MIT"
include = ["CHANGELOG.md"]

[tool.poetry.dependencies]
python = ">=3.6"
pyyaml = "^5.3"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
tox = "^3.14.6"

[tool.poetry.scripts]
gadk = 'gadk.cli:cmd'

# Enable tox.
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
